--- a/views/login.html
+++ b/views/login.html
@@ -47,24 +47,7 @@
             </div>
           </div>
           <form class="w-75 max400">
-            <!-- Login con email -->
-             <!--<div class="form-row mb-2">
-              <div class="form-group col-12 ">
-                <label for="email" class="sr-only"></label>
-                <input type="text" id="email" class="form-control rounded-corners" placeholder="Email">
-              </div>
-              <div class="form-group col-12">
-                <label for="password" class="sr-only"></label>
-                <input type="password" id="password" class="form-control rounded-corners" placeholder="Password">
-                <small id="login-help" class="form-text text-center mt-2 d-none">
-                  Correo y/o contraseña incorrectos. Inténtalo nuevamente.
-                </small>
-              </div>
-              <div class="form-group col-8 offset-2 col-md-6 offset-md-3">
-                <button id="email-login" class="btn btn-yellow form-control rounded-corners">Log in</button>
-              </div>
-            </div>
-            <p class="text-center mb-3">O bien ingresa con...</p>-->
+
             <!-- Botones para iniciar con redes sociales -->
             <div class="form-row">
               <div class="form-group col-6">
@@ -72,16 +55,16 @@
                   <i class="fa fa-google" aria-hidden="true"></i>
                 </button>
               </div>
-              <!--  <div class="form-group col-8">
-                <button type="button" id="google-login" class="btn btn-danger rounded-corners">
-                  <i class="fa fa-google" aria-hidden="true"></i>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-6">
+                <button type="button" id="continue" class="btn btn-primary rounded-corners float-right">
+                  <i class="fa fa-arrow-right" aria-hidden="true"></i>
                 </button>
               </div>
-            </div>-->
+            </div>
           </form>
-         <!--  <p class="text-center">¿No tienes una cuenta?
-            <a class="link-yellow font-weight-bold" href="register.html">Regístrate.</a>
-          </p> -->
+        
         </div>
       </div>
     </section>
